# machine-learning-project-of-heart-api

./: .gitignore  README.md  pyproject.toml
api/: main.py  preprocessing.py  train.py
artifacts/model_export:v4/: model_export
wandb/: latest-run
wandb/run-20220603_191252-1769ofpm/: run-1769ofpm.wandb
wandb/run-20220603_191252-1769ofpm/files/: config.yaml  diff.patch  requirements.txt  wandb-metadata.json
wandb/run-20220603_191506-3inwducq/: run-3inwducq.wandb
wandb/run-20220603_191506-3inwducq/files/: config.yaml  diff.patch  wandb-metadata.json
wandb/run-20220603_191709-351k9nbw/: run-351k9nbw.wandb
wandb/run-20220603_191709-351k9nbw/files/: config.yaml  diff.patch  wandb-metadata.json
wandb/run-20220603_191817-1tmuw076/: run-1tmuw076.wandb
wandb/run-20220603_191817-1tmuw076/files/: config.yaml  diff.patch  wandb-metadata.json
wandb/run-20220603_191919-jgguf5nz/: run-jgguf5nz.wandb
wandb/run-20220603_191919-jgguf5nz/files/: config.yaml  diff.patch  wandb-metadata.json
wandb/run-20220603_192702-2ebwr3eh/: run-2ebwr3eh.wandb
wandb/run-20220603_192702-2ebwr3eh/files/: config.yaml  diff.patch  wandb-metadata.json
